--- a/tartarus/changes.txt
+++ b/tartarus/changes.txt
@@ -1,6 +1,9 @@
 == 0.6.4.2 == 2009-07-02 23:16:00 +0100
-* Tartarus now displays the relevant changelog lines while checking
-  for a new version of itself
+* minor bugfixes
+* renamed tartarus.sh to tartarus
+* renamed charon.pl to charon
+* renamed orpheus.sh to orpheus
+* debian package now available
 
 == 0.6.4.1 == 2008-12-12 00:17:08 +0100
 * Tartarus now displays the relevant changelog lines while checking
