--- a/tartarus/debian/changelog
+++ b/tartarus/debian/changelog
@@ -1,3 +1,9 @@
+tartarus (0.6.4.2-1.1) unstable; urgency=low
+
+  * changed dependency from lvm-common to lvm2
+
+ -- Stefan Tomanek <stefan.tomanek@wertarbyte.de>  Fri, 03 Jul 2009 00:28:04 +0200
+
 tartarus (0.6.4.2-1) unstable; urgency=low
 
   * Initial Debian packaging
