--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tartarus (0.6.5-1) unstable; urgency=low
+
+  * switched to new debian build system
+
+ -- Stefan Tomanek <stefan.tomanek@wertarbyte.de>  Tue, 13 Oct 2009 15:41:56 +0200
+
 tartarus (0.6.5) unstable; urgency=low
 
   * minor bugfixes
