--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tartarus (0.7.1-1) unstable; urgency=low
+
+  * fixed parsing of pbzip2 compression
+
+ -- Stefan Tomanek <stefan.tomanek@wertarbyte.de>  Sun, 18 Oct 2009 13:10:51 +0200
+
 tartarus (0.7.0-1) unstable; urgency=low
 
   * Add real incremental (stacked) backups
