--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tartarus (0.9.3-1) unstable; urgency=low
+
+  * umount snapshot by specifying the mountpoint
+  * remove . and .. from FTP listings
+
+ -- Stefan Tomanek <stefan.tomanek@wertarbyte.de>  Tue, 15 Jun 2010 12:08:12 +0200
+
 tartarus (0.9.2-1) unstable; urgency=low
 
   * improve documentation format
