--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tartarus (0.9.4-2) unstable; urgency=low
+
+  * adjust debhelper version
+  * add manpage charon.1 (-> charon.ftp.1)
+  * Switch to dpkg-source 3.0 (quilt) format
+
+ -- Stefan Tomanek <stefan.tomanek@wertarbyte.de>  Thu, 18 Nov 2010 00:21:06 +0100
+
 tartarus (0.9.4-1) unstable; urgency=low
 
   * add SFTP support
