--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tartarus (0.9.7-1) unstable; urgency=low
+
+  * fix context of ls-calls in charon.ftp
+  * increment version number to 0.9.7
+
+ -- Stefan Tomanek <stefan.tomanek+debian@wertarbyte.de>  Fri, 21 Jan 2011 23:49:25 +0100
+
 tartarus (0.9.6-1) unstable; urgency=low
 
   [ Stefan Tomanek ]
